[package]
name = "ufbr"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = "0.28.1"
hidapi = { version = "2.6.3", features = [
    "windows-native",
], default-features = false }
indicatif = "0.17.11"
tap = "1.0.1"
